; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_uri_add.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_uri_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_cache_uri = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lev_cache_uri*, i32)* @cache_uri_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_uri_add(%struct.lev_cache_uri* %0, i32 %1) #0 {
  %3 = alloca %struct.lev_cache_uri*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [256 x i8], align 16
  store %struct.lev_cache_uri* %0, %struct.lev_cache_uri** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds [256 x i8], [256 x i8]* %5, i64 0, i64 0
  %7 = load %struct.lev_cache_uri*, %struct.lev_cache_uri** %3, align 8
  %8 = getelementptr inbounds %struct.lev_cache_uri, %struct.lev_cache_uri* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @memcpy(i8* %6, i32 %9, i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds [256 x i8], [256 x i8]* %5, i64 0, i64 %13
  store i8 0, i8* %14, align 1
  %15 = getelementptr inbounds [256 x i8], [256 x i8]* %5, i64 0, i64 0
  %16 = call i32 @get_uri_f(i8* %15, i32 1)
  ret void
}

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @get_uri_f(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
